# ChangeLog for media-libs/libsdl
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*libsdl-2.0.0_pre7001-r1 (18 Mar 2013)

  18 Mar 2013; Azamat H. Hackimov <azamat.hackimov@gmail.com>
  +files/libsdl-universal_sizeof_voidp.patch, +libsdl-2.0.0_pre7001-r1.ebuild:
  [media-libs/libsdl] Fixing error with Header checksum mismatch on abi_x86_32
  (bug #462036). Problem with media-libs/nas linking still unresolved.

*libsdl-2.0.0_pre7001 (14 Mar 2013)

  14 Mar 2013; Azamat H. Hackimov <azamat.hackimov@gmail.com>
  +libsdl-2.0.0_pre7001.ebuild, -libsdl-2.0.0_pre6963-r2.ebuild:
  [media-libs/libsdl] 7001 revision for Steam dependency.

*libsdl-2.0.0_pre6963-r2 (12 Mar 2013)

  12 Mar 2013; Azamat H. Hackimov <azamat.hackimov@gmail.com>
  +files/libsdl-add-libtool-export-cmake-v2.patch,
  +libsdl-2.0.0_pre6963-r2.ebuild, -files/9999-sdl2-config.in.patch,
  -libsdl-2.0.0_pre6799.ebuild:
  [media-libs/libsdl] 2.0.0_pre6963-r2 with patch that creates proper library
  symlinks (including libSDL2-2.0.so). Should fix problem with Steam now.

*libsdl-2.0.0_pre6963-r1 (11 Mar 2013)

  11 Mar 2013; Azamat H. Hackimov <azamat.hackimov@gmail.com>
  +libsdl-2.0.0_pre6963-r1.ebuild, -libsdl-2.0.0_pre6963.ebuild:
  [media-libs/libsdl] Playing with multilib eclass.

*libsdl-2.0.0_pre6963 (05 Mar 2013)

  05 Mar 2013; Azamat H. Hackimov <azamat.hackimov@gmail.com>
  +libsdl-2.0.0_pre6963.ebuild, -Manifest,
  -files/libsdl-1.2.13-sdl-config.patch, -files/libsdl-1.2.14-click.patch,
  -files/libsdl-1.2.14-disappearingcursor.diff, -libsdl-1.2.14-r3.ebuild,
  -libsdl-9999-r2.ebuild, libsdl-2.0.0_pre6799.ebuild, metadata.xml:
  [media-libs/libsdl] Bump to 6963 revision, remove old obsolete 1.2.14 and
  buggy 9999-r2, metadata cleanup.

  07 Jan 2013; Sergey Popov <pinkbyte@gentoo.org> libsdl-2.0.0_pre6799.ebuild:
  Use versionator eclass for getting revision

*libsdl-2.0.0_pre6799 (04 Jan 2013)

  04 Jan 2013; Azamat H. Hackimov <azamat.hackimov@gmail.com>