@@ -1,0 +1,11 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST SDL-2.0.0-7024.tar.gz 4801940 SHA256 085b73319a9c104ef9cb275f6d3042bf62d1a7f155094e801cb022cde1218e27 SHA512 83282eed23eafe50bc0a9f385e93aec6ff602515efabcd3a6fe4d5fd2c0650a647223a7cbb5cb0c6205bbc83f90a0b5fb0e2e2228cb82c137d5f70d686251e41 WHIRLPOOL 6d1e1fc8629cc8ea64b158a1c75764dc79fb9ff968a8fb71de0cf4a357e93079d525156e9d4b912a86356fcd2eb6120ceec25ec56ae84bb542c19497576b49d8
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.19 (GNU/Linux)
+
+iF4EAREIAAYFAlFZuGEACgkQz+A7F6AY3oyVcAD6A2HM7Ah5VeWxQLInPyoN0rhP
+SkJPWE2G2UOtzhbIT0oBAJaTgHxU7srFGjqYN3mDIBvVMZ61NwldJjDWWPGxjZ4j
+=fnqB
+-----END PGP SIGNATURE-----
